# agentskills-mcp

./: README.md  README_ZH.md  pyproject.toml
agentskills_mcp/: __init__.py
mcp_agentskills/core/tools/: load_skill_metadata_op.py  load_skill_op.py  read_reference_file_op.py  run_shell_command_op.py  run_shell_command_prompt.yaml
tests/: run_skill_agent.py  skill_agent.py  skill_agent_prompt.py
